--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ PORT=3000
 
 # Add other environment variables here
 
-MONGO_URI = <your-connection-string-here>
+MONGO_URI = mongodb+srv://aungkokhant2213:aung2213@cluster0.uekrq.mongodb.net/tasktracker?retryWrites=true&w=majority&appName=Cluster0
