--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,19 @@
     "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.7",
     "daisyui": "^5.0.37",
+    "firebase": "^11.8.1",
+    "formik": "^2.4.6",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.6.1",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
