--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,13 @@
 # Server Configuration
 PORT=3500
+NODE_ENV=development
 
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# GraphQL
+GRAPHQL_ENDPOINT=/graphql
 # Add other environment variables here
 
-MONGO_URI = mongodb+srv://aungkokhant2213:aung2213@cluster0.uekrq.mongodb.net/tasktracker?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://monahu2022:j0rDkVT4yrEwB5qS@cluster0.rjg5c.mongodb.net/capstone
