--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
+    "@apollo/server": "^4.12.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "firebase-admin": "^13.4.0",
+    "graphql": "^16.11.0",
+    "lodash": "^4.17.21",
     "mongoose": "^8.15.1"
   },
   "name": "capstone-server",
@@ -10,9 +16,12 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
