ignore env, env example in the README

--- a/server/.env
+++ b/server/.env
@@ -10,4 +10,4 @@ RATE_LIMIT_MAX_REQUESTS=100
 GRAPHQL_ENDPOINT=/graphql
 # Add other environment variables here
 
-MONGO_URI = mongodb+srv://monahu2022:j0rDkVT4yrEwB5qS@cluster0.rjg5c.mongodb.net/capstone
+MONGO_URI = mongodb+srv://
