prepare the frontend testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 server/node_modules/*
 server/.env
-
+.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -11,4 +11,3 @@ server/.env
 *.njsproj
 *.sln
 *.sw?
-server/.env
