--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
     "vite": "^6.3.5",
+    "vite-plugin-compression": "^0.5.1",
     "vitest": "^3.2.4"
   }
 }
