--- a/client/.env
+++ b/client/.env
@@ -4,8 +4,10 @@ VITE_GRAPHQL_ENDPOINT=http://localhost:3500/graphql
 # App Mode (for conditional logic)
 VITE_APP_MODE=development
 
-# Backend Status (since you don't have backend yet)
-VITE_HAS_BACKEND=false
+# Backend Status 
+VITE_HAS_BACKEND=true
 # App Configuration
 VITE_APP_NAME=RestJAM
 VITE_APP_VERSION=1.0.0
+# Google Map API
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyBVlQTh9Q_24hXDsANsF4cBLTQF5edIMTg
