--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "@apollo/client": "^3.13.8",
     "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.7",
+    "@tiptap/react": "^2.23.1",
+    "@tiptap/starter-kit": "^2.23.1",
     "daisyui": "^5.0.37",
     "firebase": "^11.8.1",
     "formik": "^2.4.6",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
