--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "@tiptap/react": "^2.23.1",
     "@tiptap/starter-kit": "^2.23.1",
     "daisyui": "^5.0.37",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.3",
     "firebase": "^11.8.1",
     "formik": "^2.4.6",
     "graphql": "^16.11.0",
