--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@apollo/server": "^4.12.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -9,7 +10,11 @@
     "firebase-admin": "^13.4.0",
     "graphql": "^16.11.0",
     "lodash": "^4.17.21",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
+    "sharp": "^0.34.2",
+    "streamifier": "^0.1.1",
+    "uuid": "^11.1.0"
   },
   "name": "capstone-server",
   "version": "1.0.0",
