--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@apollo/server": "^4.12.2",
+    "@stripe/stripe-js": "^7.4.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -14,6 +15,7 @@
     "multer": "^2.0.1",
     "sharp": "^0.34.2",
     "streamifier": "^0.1.1",
+    "stripe": "^18.3.0",
     "uuid": "^11.1.0"
   },
   "name": "capstone-server",
