--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "@tiptap/react": "^2.23.1",
     "@tiptap/starter-kit": "^2.23.1",
+    "axios": "^1.10.0",
     "daisyui": "^5.0.37",
     "dompurify": "^3.2.6",
     "emoji-mart": "^5.6.0",
