--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.1",
+    "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.7",
     "yup": "^1.6.1"
   },
