--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "sharp": "^0.34.2",
     "streamifier": "^0.1.1",
     "stripe": "^18.3.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "validator": "^13.15.15"
   },
   "name": "capstone-server",
   "version": "1.0.0",
