--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:analyze": "vite build --mode production && npx vite-bundle-analyzer dist",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
@@ -28,8 +29,6 @@
     "axios": "^1.10.0",
     "daisyui": "^5.0.37",
     "dompurify": "^3.2.6",
-    "emoji-mart": "^5.6.0",
-    "emoji-picker-react": "^4.12.3",
     "firebase": "^11.8.1",
     "formik": "^2.4.6",
     "graphql": "^16.11.0",
