--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-router": "^7.6.1",
     "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.7",
+    "yet-another-react-lightbox": "^3.25.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
